--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
   <link rel="stylesheet" href="style.css">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-   <!-- Bootstrap CSS -->
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+  <!-- Bootstrap CSS -->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 
-<!-- Bootstrap JavaScript -->
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+  <!-- Bootstrap JavaScript -->
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -25,69 +25,102 @@
     <a href="#news">News</a>
     <a href="#contact">Contact</a>
   </div>
-  <div class="container">
-    <div id="myCarousel" class="carousel slide" data-ride="carousel">
-      <!-- Indicators -->
-      <ol class="carousel-indicators">
-        <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-        <li data-target="#myCarousel" data-slide-to="1"></li>
-        <li data-target="#myCarousel" data-slide-to="2"></li>
-        <li data-target="#myCarousel" data-slide-to="3"></li>
-        <li data-target="#myCarousel" data-slide-to="4"></li>
-      </ol>
-
-      <!-- Wrapper for slides -->
-      <div class="carousel-inner">
-        <div class="item active">
-          <img src="https://i.imgur.com/cx2JYQD.jpg" alt="Plane">
-          <div class="carousel-caption">
-            <h3><span class="name">Plane<span><h3>
-          </div>
-        </div>
-
-        <div class="item">
-          <img src="https://i.imgur.com/3kXgOv0.jpg">
-          <div class="carousel-caption">
-            <h3><span class="name">Boat</span></h3>
-          </div>
-        </div>
-
-        <div class="item">
-          <img src="">
-          <div class="carousel-caption">
-            <h3><a href="#"><span class="name">Toy</span></a></h3>
-          </div>
-        </div>
-
-        <div class="item">
-          <img src="">
-          <div class="carousel-caption">
-            <h3><a href="#"><span class="name">Toy</span></a></h3>
-          </div>
-        </div>
-
-        <div class="item">
-          <img
-            src=""
-            alt="">
-          <div class="carousel-caption">
-            <h3><a href="#"><span class="name">Toy</span></a></h3>
-          </div>
-        </div>
-
-
-
-      <!-- Left and right controls -->
-      <a class="left carousel-control" href="#myCarousel" data-slide="prev">
-        <span class="glyphicon glyphicon-chevron-left"></span>
-        <span class="sr-only">Previous</span>
-      </a>
-      <a class="right carousel-control" href="#myCarousel" data-slide="next">
-        <span class="glyphicon glyphicon-chevron-right"></span>
-        <span class="sr-only">Next</span>
-      </a>
+  <div id="carouselExampleControlsNoTouching" class="carousel slide toys" data-bs-touch="false" data-bs-interval="false">
+    <div class="carousel-inner">
+      <div class="carousel-item active">
+        <img src="https://i.imgur.com/bDVWCwF.jpg" class="d-block w-100" alt="Plane">
+      </div>
+      <div class="carousel-item">
+        <img src="https://i.imgur.com/hu5XtId.jpg" class="d-block w-100" alt="Boat">
+      </div>
+      <div class="carousel-item">
+        <img src="https://i.imgur.com/0x9BEgi.jpg" class="d-block w-100" alt="block">
+      </div>
+      <div class="carousel-item">
+        <img src="https://i.imgur.com/At7GwU1.jpg" class="d-block w-100" alt="Boat">
+      </div>
+      <div class="carousel-item">
+        <img src="https://i.imgur.com/UHY6iUM.jpg" class="d-block w-100" alt="Boat">
+      </div>
     </div>
+    <button class="carousel-control-prev" type="button" data-bs-target=".toys" data-bs-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Previous</span>
+    </button>
+    <button class="carousel-control-next" type="button" data-bs-target=".toys" data-bs-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Next</span>
+    </button>
   </div>
+  <div id="carouselExampleControlsNoTouching" class="carousel slide descriptopn" data-bs-touch="false" data-bs-interval="false">
+    <div class="carousel-inner">
+      <div class="carousel-item active">
+        <ul class="d-list">
+          <li>Wooden Airplane Toy. Defying gravity and soaring in the sky is every boys dream. Keep him dreaming big with this classic wooden airplane made by us, here at Little Bird Toys in Bound Brook, NJ.</li>
+          <li>The airplane comes ready to fly with a kid-safe Natural Harvest Finish and a propeller that spins. </li>
+          <li>The dimensions of the Airplane is approximately 3.5"H x 7"L x 7"W .</li>
+          <li>The Airplane Comes with Real Rolling Wheels and Spinning Propellers.</li>
+          <li>Made out of Solid Wood - Built to Last for a Lifetime of Play.</li>
+          <li>Perfect Creative Gift for Toddlers.</li>
+          <li>Safe for Young Kids - Comes with a Non-Toxic Finish!</li>
+        </ul>
+      </div>
+      <div class="carousel-item">
+        <ul class="d-list">
+          <li>A beautiful handmade wooden train set - Engine and three interchangeable cars Handmade detailed artwork made of real beech wood.</li>
+          <li>Wonderful Christmas gift! Large size - 84 cm length, 11 height and 13 width Moving wheel mechanism.</li>
+          <li>Fully ecological product, only natural materials. High quality and durable.</li>
+          <li>Suitable for children from 3 years old Lots of fun guaranteed at any age!</li>
+          <li>This set can be painted using wood paint.</li>
+          <li>Theses toys are #timeless and can be passed down for generations to come.</li>
+          <li>Please note that these toys have small parts that could break off if used inappropriately.</li>
+        </ul>
+      </div>
+      <div class="carousel-item">
+        <ul class="d-list">
+          <li>On the coast of Maine, "Lobstah" boats like this one are a common sight.</li>
+          <li>This new wooden toy model really floats and makes a great bath toy.</li>
+          <li>The safe and simple design encourages a child to use his or her own imagination.   Batteries not required!</li>
+          <li> Handcrafted in Maine with soft and rounded corners and edges to nourish a child's senses and to be safe for toddlers.   </li>
+          <li>Built of solid Maine white pine and sturdy enough to withstand years of use before being passed down to the next generation. </li>
+          <li>Boat comes with two peg lobster- people.</li>
+          <li>SIZE : 10.5"W x 3.5"H</li>
+          <li>MATERIAL : Solid White Pine</li>
+        </ul>
+      </div>
+      <div class="carousel-item">
+        <ul class="d-list">
+          <li>High-Grade Quality: Hardwood blocks are sturdy, solid and safe for kids. </li>
+          <li>72 naturally finished and smooth-sanded hardwood blocks. Case size is 13” L x 12” W x 2” H. </li>
+          <li>Packaged in a handsome, wooden storage crate for easy storage. </li>
+          <li>Suitable for children ages 3 and up. </li>
+          <li>Highly durable set for indoor or outdoor use including: lawns, patios, living rooms, preschools, kindergartens & anywhere else. </li>
+          <li>Make your own dream castle anywhere.  Block play helps promote creativity, independent play, cooperative play, fine motor skills and hand-eye coordination. </li>
+          <li>When building, children must consider proportions, symmetry, size and more, which benefit early cultivation of concepts. </li>
+          <li>This product is conducive to your child's imagination, allowing various kinds of combinations to be built</li>
+        </ul>
+      </div>
+      <div class="carousel-item">
+        <ul class="d-list">
+          <li>Beautifully handcrafted wooden car. One-of-a-kind - (the photos included for this item may not be the actual car that you will receive. </li>
+          <li>All cars are the same size and construction).   </li>
+          <li>Great toy that will inspire imaginative and active play. This car will be in your family for generations to come - think heirloom or keepsake.  </li>
+          <li>Handcrafted from a variety of domestic and exotic hardwoods including maple, oak, mahogany, cherry woods, etc., coated with clear lacquer to enhance and hold the natural wood color. All edges are rounded over and sanded for a silky smooth finish.  </li>
+          <li>Please be aware there may be choking hazards with small children. Toys have a few small parts that may break with excessive rough or improper use.</li>
+        </ul>
+      </div>
+    </div>
+    <button class="carousel-control-prev" type="button" data-bs-target=".descriptopn" data-bs-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Previous</span>
+    </button>
+    <button class="carousel-control-next" type="button" data-bs-target=".descriptopn" data-bs-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Next</span>
+    </button>
+  </div>
+  <p><h1 id="Owneres"><u>About the Owners</u></h1></p>
+<p></p>
 </body>
 
 </html>
