--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
 
 <body>
   <div id="navbar">
-    <a href="#home">Home</a>
-    <a href="#news">News</a>
-    <a href="#contact">Contact</a>
+    <a href="#tyso">About Our Toys</a>
+    <a href="#Owneres">Our Story</a>
+    <a href="#signUp">Mailing List</a>
   </div>
   <div class="row">
     <div id="carouselExampleControlsNoTouching" class="carousel slide toys col-md-6" data-bs-touch="false" data-bs-interval="false">
